# finding_aid_enrichment

./: .gitignore  README.md
adam/: README.rst  model.org  pyproject.toml
adam/docs/source/: conf.py  index.rst
adam/src/: dump_correspondence.py
adam/src/adam/: analyze_manifest.py  appellation.py  appellation_builder.py  clean_ocr.py  cli.py  collection.py  container.py  create_graph.py  download_pages.py  filter_ocr.py  gen_ocr_pages.py  gen_rdf_updates.py  global_vars.py  graph_loader.py  graphable.py  manifest.py  named_entity.py  page.py  page_text.py  script.py
adam/tests/: test_adam.py  test_container.py  test_graphable.py  test_manifest.py  test_named_entity.py  test_ocr.txt  test_page.py  testable_image.tif  testable_manifest.json
doc/: correspondence_manifests.txt  patterns1.jsonl
loaddb/: README.md  README.org  manifest_loader.py  ttl_loader.py
nel/: pyproject.toml
nel/nel/: nel.py
nel/tests/: conftest.py  test_nel.py
nel/tests/test_files/: small-data.tsv
query/: pyproject.toml
query/src/query/: query.py
training/: training_patterns.jsonl
