[tool.poetry]
name = "adam"
version = "0.1.0"
description = ""
authors = ["Cliff Wulfman <cwulfman@princeton.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
pytesseract = "^0.3.8"
rdflib = "^6.1.1"
shortuuid = "^1.0.8"
requests = "^2.27.1"
sense2vec = "^2.0.0"
pandas = "^1.4.1"
Pillow = "^9.0.1"
spacy = "^3.4.1"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
pylint = "^2.12.2"
flake8 = "^4.0.1"
Sphinx = "^4.4.0"
tox = "^3.24.5"

[tool.poetry.scripts]
create_graph = "adam.create_graph:run"
analyze_manifests = "adam.cli:run"
analyze_manifest = "adam.analyze_manifest:run"
download_pages = "adam.download_pages:run"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
