[tool.poetry]
name = "nel"
version = "0.1.0"
description = ""
authors = ["Cliff Wulfman <cwulfman@princeton.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
rdflib = "^6.1.1"
pytest = "^7.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
pylint = "^2.14.4"
black = "^22.6.0"
flake8 = "^4.0.1"
pytest-datafiles = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
